--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     		<p id="matricule">Daphné MATHELIER  –  Matricule : 20177495</p>
     	</div>
 
-		<fig>
+		<figure>
 			<img src="http://media.gettyimages.com/photos/man-deconstruction-picture-id1128074339?s=2048x2048" height="100%" width="100%" alt="Déconstruction de l’homme"/>
 			<figcaption> <span class="italique">Déconstruction de l’homme</span> (crédits : gremlins)</figcaption>
-		</fig>
+		</figure>
 
 		<div id="main">
 
